# fhv-arktos-robot

./: .cproject  .gitignore  .project  CMakeLists.txt  Controller.cpp  bluetooth_start.sh  controller.c  controller.h  general.c  general.cpp  general.h  main.c  main.cpp  robot.c  robot.cpp  robot.h
communication/: CommunicationClient.cpp  CommunicationClient.h  TcpClient.cpp  TcpClient.h  bluetooth.c  bluetooth.cpp  bluetooth.h  rfid.c  rfid.cpp  rfid.h  serial.cpp  serial.h
communication/protocol/: ProtocolLayer.cpp  ProtocolLayer.h
includes/DMCC/: DMCC.c  DMCC.cpp
